fix bottom content on landing overlapping nav

--- a/resources/assets/css/components/landing.less
+++ b/resources/assets/css/components/landing.less
@@ -13,6 +13,9 @@
     .the-why {
       padding-top: @tile;
     }
+    .the-what {
+      padding-bottom: @tile;
+    }
   }
 }
 .the-why,
